<package>
  <name>behaviortree_ros_msgs</name>
  <version>0.0.1</version>
  <description>
  This package provides messgaes used in behaviortree_ros.
  </description>

  <maintainer email="davide.faconti@eurecat.org">Davide Faconti</maintainer>

  <license>MIT</license>

  <author>Davide Faconti</author>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
